--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,55 +2,56 @@
 <html lang="en">
 <head>
     <title>Kamus Rejang Kito</title>
-    <link rel="stylesheet" href="/style/style.css">
-    <link rel = "icon" href = 
-"a.png" 
-	type = "image/x-icon">
-</head>
-<header class="card2">
-    <img src="a.png" style="height: auto;
-    max-height: 200px;
-    width: auto;
-    max-width: 200px;
-    box-shadow: none;
-    object-fit: contain;"/>
-    <h3>Kamus Rejang Kito!</h3>
-</header>
-<body>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="a.png" type="image/x-icon">
+    <%- include('header.ejs') -%>
 
-        <% data.forEach(element=> { %>
-            <form action="/search" method="post">
-                <input value="Taruh Kata Disini" name="value"/>
+<main class="container mt-4">
+    <h1 class="center-heading">Kamus Rejang Kito!</h1>
+  <br>
+    <form action="/search" method="post" class="custom-form">
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Taruh Kata Disini" name="value">
+            <button class="btn btn-primary" type="submit">Cari</button>
+        </div>
+    </form>
+
+    <% data.forEach(element => { %>
+    <article class="card mt-3">
+        <div class="card-body centered-card">
+            <form action="/ganti" method="post">
+                <button class="btn btn-primary btn-lg" type="submit"><%= element.textBahasa %></button>
             </form>
-            <article class="card2">
-                <form action="/ganti" method="post">
-                    <button type="submit"><%= element.textBahasa %></button>
-                </form>
-            
-                <h3 type="text" rows="6"readonly="true"
-                    placeholder="Type Here..." name="noteContent"
-                    value="<%= element.tj %>">
-                <%= element.tj %> 
-                </h3>
-                <h3 type="text" rows="6"readonly="true"
-                style="font-family: rlabel;"
-                placeholder="Type Here..." name="noteContent"
-                value="<%= element.jt %>">
-                <%= element.jt %> 
-            </h3>
-            
-        </article>
-        <% }) %>
-    <div class="card4">
-        <h3>Kamus Bacaan</h3>
-        <% notes.forEach(element=> { %>
-            <article class="card2">
-                <h3>Indonesia: <%= element.Indonesia %></h3>
-                <h3>Rejang: <%= element.Rejang %></h3>
-            </article>
-        <% }) %>
+            <h3 class="card-text text-break"><%= element.tj %></h3>
+            <h3 class="card-text text-break" style="font-family: rlabel;"><%= element.jt %></h3>
+        </div>
+    </article>
+    <% }) %>
+</main>
 
-    </div>
+<footer class="container mt-4 text-center">
+  <h1 style="color: white;">Temukan lebih banyak fitur!</h1>
+  <a href="https://play.google.com/store/apps/details?id=org.kamusbahasarejang.kamusbahasarejang" style="background-color: black;" class="btn btn-primary">
+    <img src="https://cdn-icons-png.flaticon.com/512/732/732208.png" alt="Play Store Icon" class="playstore-icon"> Get it on Play Store
+  </a>
+</footer>
 
+<style>
+  .playstore-icon {
+    height: 24px; /* Adjust the height as needed */
+    width: auto;
+    margin-right: 8px; /* Add some spacing between the icon and text */
+  }
+  @media (max-width: 576px) {
+            .center-heading {
+                font-size: 24px;
+            }
+        }
+</style>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
