--- a/views/database.ejs
+++ b/views/database.ejs
@@ -11,10 +11,10 @@
         <form class="card p-1 text-center" action="/post-database" method="post" id="popup">
             <h2>Tambahkan Kata yang Tidak Ada!</h2>
             <div class="form-group">
-                <input type="text" class="form-control" name="Indonesia" id="Indonesia" placeholder="Indonesia">
+                <input type="text" class="form-control" name="Indonesia" id="Indonesia" placeholder="Indonesia" autocomplete="off">
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" name="Rejang" id="Rejang" placeholder="Rejang">
+                <input type="text" class="form-control" name="Rejang" id="Rejang" placeholder="Rejang" autocomplete="off">
             </div>
             <button type="submit" class="btn btn-primary">Tambahkan!</button><!--Tombol Post-->
         </form>
