--- a/views/header.ejs
+++ b/views/header.ejs
@@ -72,10 +72,16 @@
 <body>
 
 <header>
-<nav class="navbar">
-    <a class="navbar-brand" href="#">
-        <img src="a.png" width="30" height="30" class="d-inline-block align-top" alt="Logo">
-        Kamus Rejang Kito
-    </a>
-</nav>
+    <nav class="navbar navbar-expand-lg navbar-dark ">
+        <a class="navbar-brand" href="#">
+            <img src="a.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            Kamus Rejang Kito</a>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="http://kamus-rejang-kito.mfathinhalim.repl.co/">Home</a>
+            <a class="nav-item nav-link" href="/database">Kamus bacaan dan Tambahkan Kata!</a>
+            <a class="nav-item nav-link" href="/kaganga">Kaganga!</a>
+          </div>
+        </div>
+      </nav>
 </header>
