--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,13 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="a.png" type="image/x-icon">
     <%- include('header.ejs') -%>
+    <script>
+      console.log("%c Made by M.Fathin Halim", "color: blue;")
+    </script>
 
 <main class="container mt-4">
-    <h1 class="center-heading">Kamus Rejang Kito!</h1>
+    <h3 class="center-heading"><img src="a.png" width="50" height="50" class="d-inline-block align-top" alt="Logo"> Kamus Rejang Kito!</h3>
   <br>
     <form action="/search" method="post" class="custom-form">
         <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Taruh Kata Disini" name="value">
+            <input type="text" class="form-control" placeholder="Taruh Kata Disini" name="value" autocomplete="off">
             <button class="btn btn-primary" type="submit">Cari</button>
         </div>
     </form>
@@ -55,3 +58,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+  
